--- a/templates/index.jinja
+++ b/templates/index.jinja
@@ -1,9 +1,14 @@
 {% extends 'base.jinja' %}
+{% import 'bootstrap/wtf.html' as wtf %}
 
 {% block pagecontent %}
     <div class="page-header">
-        <h1>hello, world !</h1>
+        <h1>hello, {% if name %} {{ name }} {% else %} Stranger {% endif %} !</h1>
+        {% if known %}
+            <p> Happy to seee you again! </p>
+        {% else %}
+            <p> please to meet you! </p>
+        {% endif %}
     </div>
-    <p>The local date and time is {{ moment(current_time).format('LLL') }}</p>
-    <p>That was {{ moment(current_time).fromNow(refresh=True) }}</p>
+    {{ wtf.quick_form(form) }}
 {% endblock %}
