--- a/app/templates/index.jinja
+++ b/app/templates/index.jinja
@@ -3,7 +3,14 @@
 
 {% block pagecontent %}
     <div class="page-header">
-        <h1>hello, {% if name %} {{ name }} {% else %} Stranger {% endif %} !</h1>
+        <h1>hello, 
+            {% if current_user.is_authenticated %} 
+                {{ current_user.username }} 
+            {% else %}
+                Stranger 
+            {% endif %}
+                !
+         </h1>
         {% if known %}
             <p> Happy to seee you again! </p>
         {% else %}
