--- a/app/templates/user.jinja
+++ b/app/templates/user.jinja
@@ -23,6 +23,8 @@
             Last seen {{ moment(user.last_seen).format('L') }}.
         </p>
     </div>
+    <h3>Posts by {{ user.username }}</h3>
+    {% include '_posts.jinja' %}
     {% if user == current_user %}
         <a class="btn btn-default" href="{{ url_for('.edit_profile') }}">
         Edit Profile
