--- a/app/templates/post.jinja
+++ b/app/templates/post.jinja
@@ -1,7 +1,12 @@
 {% extends 'base.jinja' %}
+{% import '_macros.jinja' as macros%}
+{% import 'bootstrap/wtf.html' as wtf%}
 
 {% block title %}Flasky - Post{% endblock %}
 
 {% block pagecontent %}
     {% include '_posts.jinja' %}
+    {{ wtf.quick_form(form) }}
+    {% include '_comments.jinja'  %}
+    {{ macros.pagination_widget(pagenation, endpoint, id=id) }}
 {% endblock %}
