--- a/app/templates/_posts.jinja
+++ b/app/templates/_posts.jinja
@@ -1,4 +1,4 @@
-<ul class="post">
+<ul class="posts">
     {% for post in posts %}
     <li class="post">
         <div class="post-thumbnail">
@@ -13,7 +13,7 @@
                 {{ post.author.username }}
             </a>
         </div>
-        <div class="post-body">
+        <div class="post-content">
             {% if post.body_html %}
                 {{ post.body_html | safe }}
             {% else %}
