--- a/app/templates/base.jinja
+++ b/app/templates/base.jinja
@@ -58,5 +58,8 @@
 
 {% block scripts %}
     {{ super() }}
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
     {{ moment.include_moment() }}
 {% endblock %}
