--- a/app/templates/user.jinja
+++ b/app/templates/user.jinja
@@ -4,6 +4,7 @@
     <div class="page-header">
         <h1>{{ user.username }}</h1>
         <img class="img-rounded profile-thumbnail" src="{{ user.gravatar(size=256)}}">
+        <div class="profile-header">
         {% if user.name or user.location %}
         <p>
             {% if user.name %}{{ user.name }}{% endif %}
@@ -40,8 +41,10 @@
         {% if current_user.is_authenticated and user != current_user and
             user.isfollowing(current_user) %}
             <span class="label label-default">Follows you</span>
-        {% endif %}   
+        {% endif %}
+        </div>
     </div>
+    <div class="post-tabs">
     <h3>Posts by {{ user.username }}</h3>
     {% include '_posts.jinja' %}
     {% if user == current_user %}
@@ -54,4 +57,5 @@
         Edit Profile [Admin]
         </a>
     {% endif %}
+    </div>
 {% endblock %}
