--- a/app/templates/_comments.jinja
+++ b/app/templates/_comments.jinja
@@ -6,6 +6,7 @@
                     <img src="{{ comment.author.gravatar(size=40) }}">
                 </a>
             </div>
+            <div class="comment-content">
             <div class="comment-date">
                 {{ moment(comment.timestamp).format('L') }}
             </div>
@@ -14,7 +15,7 @@
                     {{ comment.author.username }}
                 </a>
             </div>
-            <div class="comment-content">
+            <div class="comment-body">
                 {% if comment.disabled %}
                     This comment has been disabled by a moderator
                 {% endif %}
@@ -38,6 +39,7 @@
                     </a>
                     {% endif %}
                 {% endif %}
+            </div>
             </div>
         </li>
     {% endfor %}
