--- a/app/templates/_posts.jinja
+++ b/app/templates/_posts.jinja
@@ -7,13 +7,14 @@
                     src="{{ post.author.gravatar(size=40)}}">
             </a>
         </div>
+        <div class="post-content">
         <div class="post-date">{{ moment(post.timestamp).fromNow() }}</div>
         <div class="post-author">
             <a href="{{ url_for('.user', username=post.author.username) }}">
                 {{ post.author.username }}
             </a>
         </div>
-        <div class="post-content">
+        <div class="post-body">
             {% if post.body_html %}
                 {{ post.body_html | safe }}
             {% else %}
@@ -33,6 +34,7 @@
                     <span class="label label-danger">Edit [Admin]</span>
                 </a>
             {% endif %}
+        </div>
         </div>
     </li>
     {% endfor %}
