--- a/app/templates/index.jinja
+++ b/app/templates/index.jinja
@@ -17,18 +17,21 @@
         {% else %}
             <p> please to meet you! </p>
         {% endif %}
-        {% if show_followed %}
-            <a class="btn btn-default" href="{{ url_for('.show_all') }}"> see all posts </a>
-        {% else %}
-            <a class="btn btn-default" href="{{ url_for('.show_followed') }}"> see followed posts</a>
-        {% endif %}
     </div>
     <div>
         {% if current_user.can(Permission.WRITE_ARTICLES) %} 
             {{ wtf.quick_form(form) }}
         {% endif %}
     </div>
-    {% include '_posts.jinja' %}
+    <div class="post-tabs">
+        <ul class="nav nav-tabs">
+            <li{% if not show_followed %} class="active"{% endif %}><a href="{{ url_for('.show_all') }}">All</a></li>
+            {% if current_user.is_authenticated %}
+            <li{% if show_followed %} class="active"{% endif %}><a href="{{ url_for('.show_followed') }}">Followers</a></li>
+            {% endif %}
+        </ul>
+        {% include '_posts.jinja' %}
+    <div>
     {% if pagination %}
     <div class="pagination">
         {{ macros.pagination_widget(pagination, '.index') }}
